[project]
name = "kanta-lab-omop-qc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vincent", email = "vincent-octo@users.noreply.github.com" }
]
dependencies = [
    "polars==0.20.21",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython==8.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kanta_lab_omop_qc"]
